# r_pso

./: Cargo.toml
examples/: self_run.rs  small_run.rs
src/: lib.rs  limited.rs  main.rs  opt_bench.rs
src/prelude/: mod.rs  result.rs
