[package]
name = "pso"
version = "0.1.0"
authors = ["chatblanc-ciel <73688885+chatblanc-ciel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
gnuplot = "0.0.37"
itertools = "0.10.0"
ord_subset = "3.1.1"

serde_derive = "1.0.116"
serde = "1.0.116"
csv = "1.1.3"
rand_distr = "0.4.0"
plotters = "0.3.0"
rayon = "1.5.0"
